api: implement declining peers requests for `peers/accept_peer` method
